--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="input-container">
             <input type="text" id="item-input" placeholder="Enter item name">
-            <input type="number" id="priority-input" placeholder="Priority (e.g., 1, 2, 3)">
+            <input type="number" id="priority-input" placeholder="Priority lvl">
             <button id="add-item-btn">Add Item</button>
         </div>
 
